Deleted logging test in case there cann't be two main Methods. Additional added a Label in GUI that something will be presented

--- a/Mail_It/src/Mail_It/Mail_It.fxml
+++ b/Mail_It/src/Mail_It/Mail_It.fxml
@@ -1,7 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-	
+
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.VBox?>
-	
-<VBox xmlns:fx="http://javafx.com/fxml" fx:controller="Mail_It.Mail_It_Controller">
-	<!-- TODO Add Nodes -->
+<?import javafx.scene.text.*?>
+
+<VBox prefHeight="400.0" prefWidth="400.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="Mail_It.Mail_It_Controller">
+  <!-- TODO Add Nodes -->
+  <children>
+    <Label prefHeight="130.0" prefWidth="386.0" text="There is a Text" textFill="#ff3333" textOverrun="ELLIPSIS">
+      <font>
+        <Font name="System Bold" size="32.0" />
+      </font>
+    </Label>
+  </children>
 </VBox>
