--- a/Mail_It/src/mail_It/Mail_It.fxml
+++ b/Mail_It/src/mail_It/Mail_It.fxml
@@ -8,133 +8,177 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.*?>
 
-<VBox prefHeight="600.0" prefWidth="800.0" snapToPixel="true" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="Mail_It.Mail_It_Controller">
-  <!-- TODO Add Nodes -->
-  <children>
-    <MenuBar useSystemMenuBar="false" VBox.vgrow="NEVER">
-      <menus>
-        <Menu mnemonicParsing="false" text="File">
-          <items>
-            <MenuItem mnemonicParsing="false" onAction="#close" text="Close" />
-          </items>
-        </Menu>
-        <Menu mnemonicParsing="false" text="Edit">
-          <items>
-            <MenuItem mnemonicParsing="false" onAction="#selectLang" text="Language..." />
-          </items>
-        </Menu>
-        <Menu mnemonicParsing="false" text="Help">
-          <items>
-            <MenuItem mnemonicParsing="false" onAction="#showAbout" text="About" />
-          </items>
-        </Menu>
-      </menus>
-    </MenuBar>
-    <BorderPane maxHeight="-1.0" prefHeight="-1.0" prefWidth="-1.0">
-      <bottom>
-        <GridPane padding="$x1" BorderPane.alignment="CENTER">
-          <children>
-            <HBox alignment="CENTER_RIGHT" prefHeight="31.000099999997474" prefWidth="390.0001220703125" spacing="10.0" GridPane.columnIndex="1" GridPane.rowIndex="0">
-              <children>
-                <Button fx:id="sendBut" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onMouseClicked="#sendMail" prefHeight="25.0" prefWidth="80.0" text="Send" />
-              </children>
-              <padding>
-                <Insets bottom="5.0" top="5.0" />
-              </padding>
-              <GridPane.margin>
-                <Insets fx:id="x1" />
-              </GridPane.margin>
-            </HBox>
-            <HBox prefHeight="30.0" prefWidth="592.0" spacing="10.0" GridPane.columnIndex="0" GridPane.margin="$x1" GridPane.rowIndex="0">
-              <padding>
-                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-              </padding>
-            </HBox>
-          </children>
-          <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="633.0" minWidth="10.0" prefWidth="620.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="389.0" minWidth="10.0" prefWidth="160.0" />
-          </columnConstraints>
-          <rowConstraints>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          </rowConstraints>
-          <BorderPane.margin>
-            <Insets top="10.0" />
-          </BorderPane.margin>
-        </GridPane>
-      </bottom>
-      <center>
-        <TextArea fx:id="msgText" prefHeight="227.0" prefWidth="694.0" wrapText="true">
-          <tooltip>
-            <Tooltip maxWidth="250.0" minWidth="150.0" prefHeight="-1.0" prefWidth="200.0" text="Enter here your message for the adressee" wrapText="true" />
-          </tooltip>
-        </TextArea>
-      </center>
-      <padding>
-        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-      </padding>
-      <top>
-        <GridPane prefWidth="780.0000999999975" BorderPane.alignment="CENTER_RIGHT">
-          <children>
-            <TextField fx:id="fromAdr" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="0">
-              <tooltip>
-                <Tooltip autoFix="true" autoHide="false" consumeAutoHidingEvents="true" contentDisplay="LEFT" maxWidth="250.0" minWidth="150.0" opacity="1.0" prefHeight="-1.0" prefWidth="200.0" text="Enter a valid mail address" textOverrun="ELLIPSIS" wrapText="true" />
-              </tooltip>
-            </TextField>
-            <TextField fx:id="toAdr" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
-              <tooltip>
-                <Tooltip autoFix="true" consumeAutoHidingEvents="true" maxHeight="-1.0" maxWidth="250.0" minWidth="150.0" prefHeight="-1.0" prefWidth="200.0" text="Enter a valid mail address. You can enter more addresses if you seperate them with a comma." wrapText="true" />
-              </tooltip>
-            </TextField>
-            <TextField id="subjectText" fx:id="subText" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
-              <tooltip>
-                <Tooltip maxWidth="-1.0" prefHeight="-1.0" prefWidth="150.0" text="Enter a subject." wrapText="true" />
-              </tooltip>
-            </TextField>
-            <Label id="from" fx:id="fromLab" text="From:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-            <Label id="to" fx:id="toLab" text="To:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-            <Label id="subject" fx:id="subLab" text="Subject:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
-            <HBox alignment="CENTER_RIGHT" prefHeight="31.0" prefWidth="780.0" spacing="10.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
-              <children>
-                <ComboBox fx:id="prioBut" maxHeight="-Infinity" maxWidth="-Infinity" onAction="#changePrio" prefHeight="25.0" prefWidth="80.0" promptText="Priority" visibleRowCount="3">
-                  <items>
-                    <FXCollections fx:factory="observableArrayList">
-                      <String fx:value="Item 1" />
-                      <String fx:value="Item 2" />
-                      <String fx:value="Item 3" />
-                    </FXCollections>
-                  </items>
-                </ComboBox>
-                <ToggleButton fx:id="logBut" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onMouseClicked="#logToggle" prefHeight="25.0" prefWidth="80.0" text="Logging" />
-              </children>
-              <padding>
-                <Insets bottom="5.0" left="5.0" top="5.0" />
-              </padding>
-            </HBox>
-          </children>
-          <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="510.0" minWidth="10.0" prefWidth="86.0" />
-            <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="700.0" minWidth="10.0" prefWidth="694.0" />
-          </columnConstraints>
-          <padding>
-            <Insets bottom="5.0" />
-          </padding>
-          <rowConstraints>
-            <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          </rowConstraints>
-        </GridPane>
-      </top>
-    </BorderPane>
-    <BorderPane prefHeight="200.0" prefWidth="200.0">
-      <center>
-        <TextArea fx:id="logText" editable="false" prefWidth="200.0" wrapText="true" />
-      </center>
-      <padding>
-        <Insets bottom="10.0" left="10.0" right="10.0" />
-      </padding>
-    </BorderPane>
-  </children>
+<VBox prefHeight="600.0" prefWidth="800.0" snapToPixel="true"
+	xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2"
+	fx:controller="mail_It.Mail_It_Controller">
+	<!-- TODO Add Nodes -->
+	<children>
+		<MenuBar useSystemMenuBar="false" VBox.vgrow="NEVER">
+			<menus>
+				<Menu mnemonicParsing="false" text="File">
+					<items>
+						<MenuItem mnemonicParsing="false" onAction="#close" text="Close" />
+					</items>
+				</Menu>
+				<Menu mnemonicParsing="false" text="Edit">
+					<items>
+						<MenuItem mnemonicParsing="false" onAction="#selectLang"
+							text="Language..." />
+					</items>
+				</Menu>
+				<Menu mnemonicParsing="false" text="Help">
+					<items>
+						<MenuItem mnemonicParsing="false" onAction="#showAbout"
+							text="About" />
+					</items>
+				</Menu>
+			</menus>
+		</MenuBar>
+		<BorderPane maxHeight="-1.0" prefHeight="-1.0" prefWidth="-1.0">
+			<bottom>
+				<GridPane padding="$x1" BorderPane.alignment="CENTER">
+					<children>
+						<HBox alignment="CENTER_RIGHT" prefHeight="31.000099999997474"
+							prefWidth="390.0001220703125" spacing="10.0"
+							GridPane.columnIndex="1" GridPane.rowIndex="0">
+							<children>
+								<Button fx:id="sendBut" maxHeight="-Infinity" maxWidth="-Infinity"
+									mnemonicParsing="false" onMouseClicked="#sendMail" prefHeight="25.0"
+									prefWidth="80.0" text="Send" />
+							</children>
+							<padding>
+								<Insets bottom="5.0" top="5.0" />
+							</padding>
+							<GridPane.margin>
+								<Insets fx:id="x1" />
+							</GridPane.margin>
+						</HBox>
+						<HBox prefHeight="30.0" prefWidth="592.0" spacing="10.0"
+							GridPane.columnIndex="0" GridPane.margin="$x1" GridPane.rowIndex="0">
+							<padding>
+								<Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+							</padding>
+						</HBox>
+					</children>
+					<columnConstraints>
+						<ColumnConstraints hgrow="SOMETIMES" maxWidth="633.0"
+							minWidth="10.0" prefWidth="620.0" />
+						<ColumnConstraints hgrow="SOMETIMES" maxWidth="389.0"
+							minWidth="10.0" prefWidth="160.0" />
+					</columnConstraints>
+					<rowConstraints>
+						<RowConstraints minHeight="10.0" prefHeight="30.0"
+							vgrow="SOMETIMES" />
+					</rowConstraints>
+					<BorderPane.margin>
+						<Insets top="10.0" />
+					</BorderPane.margin>
+				</GridPane>
+			</bottom>
+			<center>
+				<TextArea fx:id="msgText" prefHeight="227.0" prefWidth="694.0"
+					wrapText="true">
+					<tooltip>
+						<Tooltip maxWidth="250.0" minWidth="150.0" prefHeight="-1.0"
+							prefWidth="200.0" text="Enter here your message for the adressee"
+							wrapText="true" />
+					</tooltip>
+				</TextArea>
+			</center>
+			<padding>
+				<Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+			</padding>
+			<top>
+				<GridPane prefWidth="780.0000999999975"
+					BorderPane.alignment="CENTER_RIGHT">
+					<children>
+						<TextField fx:id="fromAdr" prefWidth="200.0"
+							GridPane.columnIndex="1" GridPane.rowIndex="0">
+							<tooltip>
+								<Tooltip autoFix="true" autoHide="false"
+									consumeAutoHidingEvents="true" contentDisplay="LEFT" maxWidth="250.0"
+									minWidth="150.0" opacity="1.0" prefHeight="-1.0" prefWidth="200.0"
+									text="Enter a valid mail address" textOverrun="ELLIPSIS"
+									wrapText="true" />
+							</tooltip>
+						</TextField>
+						<TextField fx:id="toAdr" prefWidth="200.0"
+							GridPane.columnIndex="1" GridPane.rowIndex="1">
+							<tooltip>
+								<Tooltip autoFix="true" consumeAutoHidingEvents="true"
+									maxHeight="-1.0" maxWidth="250.0" minWidth="150.0" prefHeight="-1.0"
+									prefWidth="200.0"
+									text="Enter a valid mail address. You can enter more addresses if you seperate them with a comma."
+									wrapText="true" />
+							</tooltip>
+						</TextField>
+						<TextField id="subjectText" fx:id="subText" prefWidth="200.0"
+							GridPane.columnIndex="1" GridPane.rowIndex="2">
+							<tooltip>
+								<Tooltip maxWidth="-1.0" prefHeight="-1.0" prefWidth="150.0"
+									text="Enter a subject." wrapText="true" />
+							</tooltip>
+						</TextField>
+						<Label id="from" fx:id="fromLab" text="From:"
+							GridPane.columnIndex="0" GridPane.rowIndex="0" />
+						<Label id="to" fx:id="toLab" text="To:"
+							GridPane.columnIndex="0" GridPane.rowIndex="1" />
+						<Label id="subject" fx:id="subLab" text="Subject:"
+							GridPane.columnIndex="0" GridPane.rowIndex="2" />
+						<HBox alignment="CENTER_RIGHT" prefHeight="31.0" prefWidth="780.0"
+							spacing="10.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+							<children>
+								<ComboBox fx:id="prioBut" maxHeight="-Infinity"
+									maxWidth="-Infinity" onAction="#changePrio" prefHeight="25.0"
+									prefWidth="80.0" promptText="Priority" visibleRowCount="3">
+									<items>
+										<FXCollections fx:factory="observableArrayList">
+											<String fx:value="Item 1" />
+											<String fx:value="Item 2" />
+											<String fx:value="Item 3" />
+										</FXCollections>
+									</items>
+								</ComboBox>
+								<ToggleButton fx:id="logBut" alignment="CENTER"
+									maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false"
+									onMouseClicked="#logToggle" prefHeight="25.0" prefWidth="80.0"
+									text="Logging" />
+							</children>
+							<padding>
+								<Insets bottom="5.0" left="5.0" top="5.0" />
+							</padding>
+						</HBox>
+					</children>
+					<columnConstraints>
+						<ColumnConstraints hgrow="SOMETIMES" maxWidth="510.0"
+							minWidth="10.0" prefWidth="86.0" />
+						<ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES"
+							maxWidth="700.0" minWidth="10.0" prefWidth="694.0" />
+					</columnConstraints>
+					<padding>
+						<Insets bottom="5.0" />
+					</padding>
+					<rowConstraints>
+						<RowConstraints maxHeight="30.0" minHeight="10.0"
+							prefHeight="30.0" vgrow="SOMETIMES" />
+						<RowConstraints maxHeight="30.0" minHeight="10.0"
+							prefHeight="30.0" vgrow="SOMETIMES" />
+						<RowConstraints maxHeight="30.0" minHeight="10.0"
+							prefHeight="30.0" vgrow="SOMETIMES" />
+						<RowConstraints maxHeight="30.0" minHeight="10.0"
+							prefHeight="30.0" vgrow="SOMETIMES" />
+					</rowConstraints>
+				</GridPane>
+			</top>
+		</BorderPane>
+		<BorderPane prefHeight="200.0" prefWidth="200.0">
+			<center>
+				<TextArea fx:id="logText" editable="false" prefWidth="200.0"
+					wrapText="true" />
+			</center>
+			<padding>
+				<Insets bottom="10.0" left="10.0" right="10.0" />
+			</padding>
+		</BorderPane>
+	</children>
 </VBox>
